--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 </head>
 <body class="mat-typography">
   <app-root></app-root>
